--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                 flex: 0 1 100%;
             }
         }
+        .category-note {
+    font-size: 0.8em;
+    color: #666;
+    margin-top: 4px;
+    margin-bottom: 8px;
+}
     </style>
 </head>
 <body>
@@ -83,8 +89,9 @@
                 <div class="input-group">
                     <label for="category1">カテゴリー</label>
                     <select id="category1"></select>
+                    <div class="category-note">※手数料カテゴリーはFBA料金シミュレーターから確認してください。</div>
                     <div id="feeDisplay1" class="fee-display"></div>
-                </div>
+                </div>  
                 <div class="input-group">
                     <label for="fbaSize1">FBAサイズ</label>
                     <select id="fbaSize1"></select>
@@ -116,6 +123,7 @@
                 <div class="input-group">
                     <label for="category2">カテゴリー</label>
                     <select id="category2"></select>
+                    <div class="category-note">※手数料カテゴリーはFBA料金シミュレーターから確認してください。</div>
                     <div id="feeDisplay2" class="fee-display"></div>
                 </div>
                 <div class="input-group">
